@@ -1,3 +1,4 @@
+# This file was automatically generated by Dist::Zilla::Plugin::Manifest v5.020.
 Changes
 LICENSE
 MANIFEST
@@ -13,5 +14,9 @@ t/both.t
 t/extended.t
 t/interactive.t
 t/pass.t
+t/perl-v5.10.1.t
+t/perl-v5.22.t
+t/perl-v5.6.t
+t/perl-v5.99.t
 t/simulation.t
 xt/release/pod-syntax.t
