@@ -1,10 +1,10 @@
 {
    "abstract" : "Skip test in a declarative way, following the Lancaster Consensus",
    "author" : [
-      "Olivier Mengue <dolmen@cpan.org>"
+      "Olivier Mengué <dolmen@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.120921",
+   "generated_by" : "Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.140640",
    "license" : [
       "perl_5"
    ],
@@ -16,7 +16,7 @@
    "prereqs" : {
       "configure" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : "6.30"
+            "ExtUtils::MakeMaker" : "0"
          }
       },
       "develop" : {
@@ -37,6 +37,9 @@
             "TAP::Harness" : "0"
          },
          "requires" : {
+            "File::Spec" : "0",
+            "IO::Handle" : "0",
+            "IPC::Open3" : "0",
             "Test::More" : "0.88"
          }
       }
@@ -50,6 +53,6 @@
          "web" : "https://github.com/dolmen/p5-Test-Is"
       }
    },
-   "version" : "20130423"
+   "version" : "20140823"
 }
 
