@@ -1,13 +1,15 @@
 
 
 This archive contains the distribution Test-Is,
-version 20130423:
+version 20140823:
 
   Skip test in a declarative way, following the Lancaster Consensus
 
-This software is copyright (c) 2013 by Olivier Mengue.
+This software is copyright (c) 2014 by Olivier Mengué.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
 
+
+This README file was generated by Dist::Zilla::Plugin::Readme v5.020.
 
