@@ -1,10 +1,10 @@
 name    = Test-Is
-author  = Olivier Mengue <dolmen@cpan.org>
+author  = Olivier Mengué <dolmen@cpan.org>
 license = Perl_5
-copyright_holder = Olivier Mengue
-copyright_year   = 2013
+copyright_holder = Olivier Mengué
+copyright_year   = 2014
 
-version = 20130423
+version = 20140823
 
 ; From @Basic:
 [GatherDir]
@@ -38,6 +38,7 @@ format = %-9v    %{yyyy-MM-dd}d    DOLMEN (Olivier Mengué)
 [RunExtraTests]
 
 [Prereqs]
+:version = 5.020
 perl = 5
 ; done_testing
 Test::More = 0.88
