@@ -1,0 +1,8 @@
+use strict;
+use warnings;
+
+use Test::Is 'perl 5.006';
+use Test::Is 'v5.6';
+
+use Test::More tests => 1;
+pass 'perl v5.6 test';
